<resources>
    <string name="app_name">My Application</string>
    <string name="listview">List View</string>
    <string name="alertlog">Alert Log</string>
    <string name="xmlmenu">Menu Test</string>
    <string name="actionmode">Action Mode</string>

    <string name="username">Username</string>
    <string name="pwd">Password</string>
    <string name="dialog_name">ANOROIO APP</string>
    <string name="cancel">cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="init">自定义对话框</string>

    <string name="font_size">字体大小</string>
    <string name="font_color">字体颜色</string>
    <string name="plain_item">普通菜单项</string>
    <string name="font_10">小</string>
    <string name="font_16">中</string>
    <string name="font_20">大</string>
    <string name="red_title">红色</string>
    <string name="black_title">黑色</string>
    <string name="test_text">这是测试文本</string>

    <string name="selected">selected</string>
    <string name="cancle">取消</string>
    <string name="delete">删除</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
</resources>
