<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/btn_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview"
        android:textSize="20sp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_alert_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertlog"
        android:textSize="20sp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_xml_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xmlmenu"
        android:textSize="20sp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_action_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actionmode"
        android:textSize="20sp"
        android:textAllCaps="false"/>

</LinearLayout>